[package]
name = "orchestrator_services"
version = "1.6.2"
authors = ["tarunjais28 <tarunjais8@gmail.com>"]
edition = '2018'

[dependencies]
actix-web = "3.3.2"
serde = "1.0.92"
rustc-serialize = "0.3.24"
chrono = "0.4.11"
serde_json = "1.0.39"
curl = "0.4.22"
odbc = "0.17.0"
clap = "2.32.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
