[package]
name = "executor_services"
version = "1.1.0"
authors = ["tarunjais28 <tarunjais8@gmail.com>"]

[dependencies]
actix-web = { version="1.0.0"}
actix-rt = "0.2"
serde = "1.0.92"
rustc-serialize = "0.3.24"
chrono = "0.4.6"
serde_bytes = "0.11.1"
serde_json = "1.0.39"
curl = "0.4.22"
clap = "2.32.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
