[package]
name = "orchestrator_services"
version = "1.8.0"
authors = ["tarunjais28 <tarunjais8@gmail.com>"]

[dependencies]
actix-web = { version="1.0.0" }
actix-rt = "0.2"
env_logger = "0.6.1"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.6"
serde = "1.0.92"
dbpool = { path = "../Libraries/dbpool" }
r2d2 = { path = "../Libraries/r2d2" }
rustc-serialize = "0.3.24"
chrono = "0.4.6"
oracle = { version = "0.2.1", features = ["chrono"] }
serde_bytes = "0.11.1"
serde_json = "1.0.39"
curl = "0.4.22"
